@@ -58,6 +58,9 @@ New Features
 * LUCENE-4686: New specialized DGapVInt8IntEncoder for facets (now the 
   default). (Shai Erera)
 
+* LUCENE-4703: Add simple PrintTaxonomyStats tool to see summary
+  information about the facets taxonomy index.  (Mike McCandless)
+
 ======================= Lucene 4.1.0 =======================
 
 Changes in backwards compatibility policy
